tests/checker/bad/return-bad4.scilla
scilla_version 0

contract ReturnBad4 ()

(* Dead code after the return statement in match arms is forbidden *)
procedure dead_code_match (a : Bool) : BNum
  match a with
  | True =>
    ret = _creation_block;
    _return := ret
  | False =>
    ret = _creation_block;
    _return := ret
  end;
  dead = _creation_block (* Error *)
end
procedure dead_code_match_fixed (a : Bool) : BNum
  match a with
  | True =>
    ret = _creation_block;
    _return := ret
  | False =>
    ret = _creation_block;
    _return := ret
  end
end

